--- a/src/pages/Settings/settings.scss
+++ b/src/pages/Settings/settings.scss
@@ -20,11 +20,22 @@
       border-radius: 100px;
       padding: 10px;
       margin-bottom: 20px;
+
+      .ui.image {
+        width: 100px;
+        height: 100px;
+        border-radius: 50px;
+      }
     }
 
-    .ui.image {
-      width: 100px;
-      border-radius: 50px;
+    .user-name {
+      display: flex;
+      justify-content: space-between;
+      width: 72.5%;
+
+      h2 {
+        padding: 0 20px !important;
+      }
     }
   }
 }
