--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -12,6 +12,8 @@ $font-dark: #000;
 $background-primary: $primary-color-hover;
 $background-light: #fff;
 $background-grey: #2d2d2d;
+$background-grey-light: #504f4f;
+$background-grey-light-hover: #616060;
 $background-grey-dark: #101010;
 $background-dark: #000;
 $background-dark-light: rgb(22, 22, 22);
