--- a/src/pages/Settings/settings.scss
+++ b/src/pages/Settings/settings.scss
@@ -18,12 +18,11 @@
       border: 2px solid #9a9a9a;
       border-style: dashed;
       border-radius: 100px;
-      padding: 10px;
+      padding: 8px;
       margin-bottom: 20px;
-
       .ui.image {
-        width: 100px;
-        height: 100px;
+        width: 90px;
+        height: 80px;
         border-radius: 50px;
       }
     }
@@ -31,11 +30,26 @@
     .user-name {
       display: flex;
       justify-content: space-between;
-      width: 72.5%;
+      width: 100%;
 
       h2 {
         padding: 0 20px !important;
       }
+      .ui.button.circular{
+        max-height: 35.972px;
+      }
+    }
+  }
+
+  .user-email, 
+  .user-password {
+    display: flex !important;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 40px;
+
+    h3{
+      margin: 0px;
     }
   }
 }
