--- a/src/components/TopBar/topBar.scss
+++ b/src/components/TopBar/topBar.scss
@@ -2,11 +2,13 @@
 
 .top-bar {
   height: 3.125rem;
-  background-color: rgb(34, 34, 34);
+  // background-color: rgb(34, 34, 34);
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 1.25rem;
+  position: relative;//added by banner-artist
+  z-index: 1;//adde by banner-artist
 
   &__left {
     i {
