addAlbum module added

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -66,4 +66,25 @@ body {
       background-color: $primary-color-hover;
     }
   }
+
+  .ui.dropdown {
+    background-color: $background-grey-light;
+    font-size: 1rem;
+    color: $font-light;
+    border:  0;
+
+    .search {
+      color: $font-light;
+    }
+
+    .menu {
+      background-color: $background-grey-light;
+      border: 0;
+
+      .item {
+        border-color: $border-light-dark;
+        color: $font-light;
+      }
+    }
+  }
 }
