--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -17,6 +17,7 @@ $background-light: #fff;
 $background-grey: #2d2d2d;
 $background-grey-light: #504f4f;
 $background-grey-light-hover: #616060;
+$background-grey-medium: #1c1c1c;
 $background-grey-dark: #101010;
 $background-dark: #000;
 $background-dark-light: rgb(22, 22, 22);
