--- a/src/pages/Albums/albums.scss
+++ b/src/pages/Albums/albums.scss
@@ -1,1 +1,30 @@
 @import "../../scss/index.scss";
+.albums {
+    margin: 20px 50px;
+  
+    > h1 {
+      border-bottom: 1px solid $border-grey-light;
+      margin-bottom: 20px;
+      padding-bottom: 10px;
+      font-size: 27px;
+    }
+  
+    &__item {
+      text-align: center;
+      margin-bottom: 0px;
+  
+      .avatar {
+        height: 150px;
+        width: 150px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        margin: 0 auto;
+      }
+  
+      h3 {
+        color: $font-grey;
+      }
+    }
+  }
+  
