--- a/src/components/Player/player.scss
+++ b/src/components/Player/player.scss
@@ -54,9 +54,25 @@
     align-items: center;
     justify-content: flex-end;
 
-    .ui.input {
+    .volume {
       display: flex;
       align-items: center;
+      input[type="range"] {
+        -webkit-appearance: none;
+        appearance: none;
+        width: 100%;
+        height: 10px;
+        border-radius: 5px;
+        background-color: #4d4d4d;
+      }
+      input[type="range"]::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        width: 1rem;
+        height: 1rem;
+        background-color: #fff;
+        border-radius: 50%;
+        border: 1px solid #888;
+      }
       i {
         color: $font-grey;
         margin-right: 1rem;
