--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -9,9 +9,15 @@ $font-light: #fff;
 $font-grey: #9e9e9e;
 $font-dark: #000;
 
+$border-grey-light: #3b3b3b;
+$border-light-dark: #9e9e9e;
+
 $background-primary: $primary-color-hover;
 $background-light: #fff;
 $background-grey: #2d2d2d;
+$background-grey-light: #504f4f;
+$background-grey-light-hover: #616060;
+$background-grey-medium: #1c1c1c;
 $background-grey-dark: #101010;
 $background-dark: #000;
 $background-dark-light: rgb(22, 22, 22);
