--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -32,3 +32,59 @@ body {
     }
   }
 }
+
+.ui.form {
+  .field {
+    .input {
+      input {
+        background: $background-grey-light;
+        font-size: 1.1rem;
+        color: $font-light;
+        border: 0;
+
+        &:hover,
+        &:active,
+        &:focus {
+          background-color: $background-grey-light-hover;
+          color: $font-light;
+          border: 0;
+        }
+      }
+    }
+  }
+
+  .ui.button {
+    width: 100%;
+    margin-top: 20px;
+    background-color: $primary-color ;
+    color: $font-light;
+    font-weight: bold;
+    font-size:  1.1rem;
+    border-radius: 50px;
+
+    &:hover {
+      background-color: $primary-color-hover;
+    }
+  }
+
+  .ui.dropdown {
+    background-color: $background-grey-light;
+    font-size: 1rem;
+    color: $font-light;
+    border:  0;
+
+    .search {
+      color: $font-light;
+    }
+
+    .menu {
+      background-color: $background-grey-light;
+      border: 0;
+
+      .item {
+        border-color: $border-light-dark;
+        color: $font-light;
+      }
+    }
+  }
+}
